# OSI

./: CMakeLists.txt  a.out  fifo.cpp  fifo.hpp  main.cpp  process.cpp  process.hpp  sjf.cpp  sjf.hpp
